gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/TraineeUpdateException.java
package com.example.gymcrm.api.rest.error.exception;

public class TraineeUpdateException extends RuntimeException {
    public TraineeUpdateException(String message) {
        super(message);
    }
}
